<resources>
    <string name="app_name">Walldo</string>
    <string name="package_name">com.enigmaticdevs.wallhaven</string>
    <string name="title_activity_homescreen">Homescreen</string>
    <string name="open_nav">open nav</string>
    <string name="close_nav">close nav</string>
    <string name="settings">Settings</string>
    <string name="auto_wallpaper">Auto Wallpaper</string>
    <string name="favorites">Favorites</string>
    <string name="upgrade">Upgrade</string>
    <string name="about_me">About Me</string>
    <string name="support_me">Support me</string>
    <string name="options">Options</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="search">Search</string>
    <string name="enter_api_key">Enter API key</string>
    <string name="refresh">Refresh</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="popular">Popular</string>
    <string name="recent">Recent</string>
    <string name="tap_on_color_to_copy">(Tap on color to copy)</string>
    <string name="tap_on_image_id_to_copy">(Tap on image ID to copy)</string>
    <string name="tags">Tags</string>
    <string name="tap_to_see_similar_images">(Tap to see similar Images)</string>
    <string name="created_at">Created At</string>
    <string name="size">Size</string>
    <string name="image_id">Image ID</string>
    <string name="resolution">Resolution</string>
    <string name="colors">Colors</string>
    <string name="file_exists_title">Download again?</string>
    <string name="file_exists_message">This image has already been downloaded. Do you want to download it again?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="wallpaper">wallpaper</string>
    <string name="try_again">Try again</string>


    <!-- About me Prefs -->
    <string name="donate_summary">If you really love it, consider supporting by donating a few bucks</string>
    <string name="donate_banner_text" translatable="false">Hello &#128075;,\n\nI\'m Wekomodo or Fury, the developer of Walldo. If you want to support further development of the app, you can choose to send a few dollars my way by selecting one of the options below.</string>
    <string name="support_development">Support Development</string>
    <string name="rate_app_title">Rate App</string>
    <string name="rate_app_summary">rate the app on play-store pretty peas</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=com.enigmaticdevs.wallhaven</string>
    <string name="report_bug_title">Report Bug</string>
    <string name="report_bug_summary">Report bugs or request new features</string>
    <string name="developer_title">Developer</string>
    <string name="instagram">Instagram</string>
    <string name="developer_instagram_username">\@wekomodo</string>
    <string name="contact_developer_uri">mailto:itswekomodo@gmail.com</string>
    <string name="developer_instagram_url">https://www.instagram.com/wekomodo/</string>
    <string name="avatar_image">avatar_image</string>
    <string name="username">username</string>
    <string name="oops">Oops</string>
    <string name="walldo_next_please">Walldo next please</string>
    <string name="thanks">Thanks</string>
    <string name="history">History</string>
    <string name="delete_all">Delete all</string>
    <string name="you_are_welcome">you\'re welcome</string>
    <string name="filters">filters</string>

    <string-array name="theme_entries">
        <item name="light">Light</item>
        <item name="dark">Dark</item>
        <item name="default">System default</item>
    </string-array>
    <string-array name="theme_values">
        <item name="light">light</item>
        <item name="dark">dark</item>
        <item name="default">default</item>
    </string-array>
    <string-array name="source_entries">
        <item name="random">Random</item>
        <item name="toplist">Popular</item>
        <item name="favorite">Favorite</item>
    </string-array>
    <string-array name="source_values">
        <item name="random">random</item>
        <item name="toplist">popular</item>
        <item name="favorite">favorite</item>
    </string-array>
    <string-array name="auto_wall_time_entries">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hour</item>
        <item>6 hour</item>
        <item>12 hour</item>
        <item>24 hour</item>
        <item>48 hour</item>
        <item>1 week</item>
    </string-array>
    <string-array name="auto_wall_time_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>2880</item>
        <item>10080</item>
    </string-array>
    <string-array name="resolution_entries">
        <item name="3840x1600">3840x1600 (Ultra wide)</item>
        <item name="3440x1440">3440x1440 (Ultra wide)</item>
        <item name="2560x1080">2560x1080 (Ultra wide)</item>
        <item name="3840x2400">3840x2400 (16:10)</item>
        <item name="2560x1600">2560x1600 (16:10)</item>
        <item name="1920x1200">1920x1200 (16:10)</item>
        <item name="1600x1000">1600x1000 (16:10)</item>
        <item name="1280x800">1280x800 (16:10)</item>
        <item name="3840x2160">3840x2160 (16:9)</item>
        <item name="2560x1440">2560x1440 (16:9)</item>
        <item name="1920x1080">1920x1080 (16:9)</item>
        <item name="1600x900">1600x900 (16:9)</item>
        <item name="1280x720">1280x720 (16:9)</item>
        <item name="3840x2880">3840x2880 (4:3)</item>
        <item name="2560x1920">2560x1920 (4:3)</item>
        <item name="1920x1440">1920x1440 (4:3)</item>
        <item name="1600x1200">1600x1200 (4:3)</item>
        <item name="1280x960">1280x960 (4:3)</item>
        <item name="3840x3072">3840x3072 (5:4)</item>
        <item name="2560x2048">2560x2048 (5:4)</item>
        <item name="1920x1536">1920x1536 (5:4)</item>
        <item name="1600x1280">1600x1280 (5:4)</item>
        <item name="1280x1024">1280x1024 (5:4)</item>
        <item name="empty">None</item>
    </string-array>
    <string-array name="resolution_values">
        <item name="3840x1600">3840x1600</item>
        <item name="3440x1440">3440x1440</item>
        <item name="2560x1080">2560x1080</item>
        <item name="3840x2400">3840x2400</item>
        <item name="2560x1600">2560x1600</item>
        <item name="1920x1200">1920x1200</item>
        <item name="1600x1000">1600x1000</item>
        <item name="1280x800">1280x800</item>
        <item name="3840x2160">3840x2160</item>
        <item name="2560x1440">2560x1440</item>
        <item name="1920x1080">1920x1080</item>
        <item name="1600x900">1600x900</item>
        <item name="1280x720">1280x720</item>
        <item name="3840x2880">3840x2880</item>
        <item name="2560x1920">2560x1920</item>
        <item name="1920x1440">1920x1440</item>
        <item name="1600x1200">1600x1200</item>
        <item name="1280x960">1280x960</item>
        <item name="3840x3072">3840x3072</item>
        <item name="2560x2048">2560x2048</item>
        <item name="1920x1536">1920x1536</item>
        <item name="1600x1280">1600x1280</item>
        <item name="1280x1024">1280x1024</item>
        <item name="empty">""</item>
    </string-array>

    <string-array name="ratio_entries">
        <item name="9x16">9x16 (portrait)</item>
        <item name="10x16">10x16 (portrait)</item>
        <item name="9x18">9x18 (portrait)</item>
        <item name="16x9">16x9 (Wide)</item>
        <item name="16x10">16x10 (Wide)</item>
        <item name="21x9">21x9 (Ultra wide)</item>
        <item name="32x9">32x9 (Ultra wide)</item>
        <item name="32x9">48x9 (Ultra wide)</item>
    </string-array>
    <string-array name="ratio_values">
        <item name="9x16">9x16</item>
        <item name="10x16">10x16</item>
        <item name="9x18">9x18</item>
        <item name="16x9">16x9</item>
        <item name="16x10">16x10</item>
        <item name="21x9">21x9</item>
        <item name="32x9">32x9</item>
        <item name="32x9">48x9</item>
    </string-array>
    <string-array name="ratio_default" />
    <string-array name="auto_wall_screen_entries">
        <item name="Home">Home Screen</item>
        <item name="Lock">Lock Screen</item>
        <item name="both">Home Screen &amp; Lock Screen</item>
    </string-array>
    <string-array name="auto_wall_screen_values">
        <item name="Home">home</item>
        <item name="Lock">lock</item>
        <item name="both">both</item>
    </string-array>
    <string-array name="set_entries">
        <item name="walldo">Walldo(more consistent)</item>
        <item name="system">System</item>
    </string-array>
    <string-array name="set_values">
        <item name="walldo">walldo</item>
        <item name="system">system</item>
    </string-array>
    <string name="title_activity_lmao">LMAO</string>
</resources>